welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: not found: value estdosMur
		while(!estdosMur()){
                       ^